--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,16 +25,17 @@ main{
 section#login{
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 470px;
     border-radius: 20px;
 
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50% , -50%);
+    
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translate(-50% , -50%);
     transition: width .3s , height .3s;
     transition-timing-function: ease;
 }
@@ -49,4 +50,82 @@ section#login> div#form{
     display: block;
     padding: 10px;
 
+}
+div#form{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#form > p{
+    font-size: 0.8em;
+    margin: 10px 0px;
+}
+form > div.campo{
+    display: block;
+    background-color: #1682fd;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+    border: 2px solid #1682fd;
+}
+form  label{
+    display: none;
+}
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 3px 5px 5px 5px;
+}
+div.campo > input{
+    background-color: #accff7;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-11px);
+}
+div.campo > input:focus-within{
+    background-color: white;
+}
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    font-weight: bold;
+    width: 100%;
+    height: 40px;
+    background-color: #8cbef7;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+}
+form > input[type=submit]:hover{
+    background-color: #1682fd;
+}
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    background-color: white;
+    border: 0.7px solid #1682fd;
+    color: #4195f5;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    padding-top:7px;
+}
+form > a.botao:hover{
+    background-color: #1682fd;
+    color: white;
+}
+form > a.botao > span{
+    
+    font-size: 0.8em;
 }
